tests/badinc.out
./badinc.svx:3:10: error: Couldn't open file "nonexistent_file"
 *include nonexistent_file
          ^~~~~~~~~~~~~~~~
cavern: error: No survey data
