tests/badinc.svx
; pos=fail
; include of a nonexistent file
*include nonexistent_file
